# multibot

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yaml
multibot/: __init__.py  constants.py  exceptions.py
multibot/bots/: __init__.py  discord_bot.py  multi_bot.py  telegram_bot.py  twitch_bot.py
multibot/models/: __init__.py  bot_action.py  buttons.py  chat.py  database.py  enums.py  event_component.py  message.py  mute.py  penalties.py  punishments.py  registered_callback.py  role.py  user.py
