[metadata]
name = {project_name}
version = {project_version}
author = {author}
author_email = alberlc@outlook.com
description = {description}
long_description = file: README.rst
url = https://github.com/{author}/{project_name}
project_urls =
    Bug Tracker = https://github.com/{author}/{project_name}/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
install_requires =
    cryptg
    discord.py
    flanautils
    hachoir
    pillow
    pymongo
    telethon
    twitchio

[options.packages.find]
include = {project_name}*

[options.package_data]
* = *
